--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,19 @@ header{
     color: white;
     transform:skew(40deg);
 }
+
+.btnContents{
+    position: absolute;
+    border: 2px solid green;
+    width:500px;
+    height:70px;
+    bottom:0;
+    transform: skew(40deg);
+}
+
+.btnContents i{
+    display: inline;
+    font-size:70px;
+    color:white;
+    transition:0.5s;
+}
