--- a/css/style.css
+++ b/css/style.css
@@ -182,10 +182,10 @@ header{
 
 .btnContents{
     position: absolute;
-    border: 2px solid green;
     width:500px;
     height:70px;
     bottom:0;
+    right:300px;
     transform: skew(40deg);
 }
 
@@ -194,4 +194,13 @@ header{
     font-size:70px;
     color:white;
     transition:0.5s;
+}
+
+.btnContents i:nth-child(1) {animation:ani 1.5s linear 0.0s infinite}
+.btnContents i:nth-child(2) {animation:ani 1.5s linear 0.5s infinite}
+.btnContents i:nth-child(3) {animation:ani 1.5s linear 1.0s infinite}
+
+@keyframes ani{
+    0%{right:0px; transform:scale(1); opacity:1;}
+    100%{right:100px; transform:scale(1.5); opacity:0;}
 }
