--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,10 @@ header{
 .btnContents i:nth-child(2) {animation:ani 1.5s linear 0.5s infinite}
 .btnContents i:nth-child(3) {animation:ani 1.5s linear 1.0s infinite}
 
+#side:hover .btnContents i:nth-child(1){display:none;}
+#side:hover .btnContents i:nth-child(2){display:none;}
+#side:hover .btnContents i:nth-child(3){display:none;}
+
 @keyframes ani{
     0%{right:0px; transform:scale(1); opacity:1;}
     100%{right:100px; transform:scale(1.5); opacity:0;}
